crates/aiken-project/src/snapshots/aiken_project__export__tests__basic_export.snap
---
source: crates/aiken-project/src/export.rs
description: "Code:\n\npub fn add(a: Int, b: Int) -> Int {\n    a + b\n}\n"
---
{
  "name": "test_module.add",
  "parameters": [
    {
      "title": "a",
      "schema": {
        "$ref": "#/definitions/Int"
      }
    },
    {
      "title": "b",
      "schema": {
        "$ref": "#/definitions/Int"
      }
    }
  ],
  "returnType": {
    "title": "return_type",
    "schema": {
      "$ref": "#/definitions/Int"
    }
  },
  "compiledCode": "500101002232337000026eb4008dd68011",
  "hash": "e5951afb3263ef11acc0b4c88cd5f5b30b8621ce63fe024b3ea2bec8",
  "definitions": {
    "Int": {
      "dataType": "integer"
    }
  }
}
