crates/aiken-project/src/snapshots/aiken_project__export__tests__recursive_types.snap
---
source: crates/aiken-project/src/export.rs
description: "Code:\n\npub type Foo<a> {\n  Empty\n  Bar(a, Foo<a>)\n}\n\npub fn add(a: Foo<Int>, b: Foo<Int>) -> Int {\n  when (a, b) is {\n    (Empty, Empty) -> 0\n    (Bar(x, y), Bar(c, d)) -> x + c + add(y, d)\n    (Empty, Bar(c, d)) -> c + add(Empty, d)\n    (Bar(x, y), Empty) -> x + add(y, Empty)\n  }\n}\n"
---
{
  "name": "test_module.add",
  "parameters": [
    {
      "title": "a",
      "schema": {
        "$ref": "#/definitions/test_module~1Foo$Int"
      }
    },
    {
      "title": "b",
      "schema": {
        "$ref": "#/definitions/test_module~1Foo$Int"
      }
    }
  ],
  "returnType": {
    "title": "return_type",
    "schema": {
      "$ref": "#/definitions/Int"
    }
  },
  "compiledCode": "590186010100229800aba2aba1aba0aab9eaab9dab9a9b874800122222223322332259800980298039baa0018992cc004c018c020dd5000c5200089919b80375a60180026600898103d8798000300c300d001300937540028038c028c02c012264b30013370e900118041baa0018999119b80337006eb4c034008dd6980680099802980698070011806980700098049baa00230093754003132337006eb4c030004cc010c030c03400530103d8798000300937540048038c028c02c01100618008009804001198028049980280425eb80888c8c966002600c60106ea8006264b300130073009375400314800226466e00dd69806800cc00401e98103d879800098069807000a00e300a37540028040c02cc03000a264b30013370e900118049baa0018999119b80337006eb4c038008dd69807000cc004022601c601e005300e300f001402060146ea8008c028dd5000c4c8cdc01bad300d0019800803cc034c038006980103d8798000401c60146ea800900818059806001200e300a00133008002330080014bd701",
  "hash": "dc9b9c2bbcfb1cb422534ed1c4d04f2e2b9b57a0a498175d055f83e8",
  "definitions": {
    "Int": {
      "dataType": "integer"
    },
    "test_module/Foo$Int": {
      "title": "Foo",
      "anyOf": [
        {
          "title": "Empty",
          "dataType": "constructor",
          "index": 0,
          "fields": []
        },
        {
          "title": "Bar",
          "dataType": "constructor",
          "index": 1,
          "fields": [
            {
              "$ref": "#/definitions/Int"
            },
            {
              "$ref": "#/definitions/test_module~1Foo$Int"
            }
          ]
        }
      ]
    }
  }
}
